--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
     .pinterest .social-btn-icon { background: #E60023; color: #fff;}
 
 
-    @media (max-width: 480px) {
+    /* @media (max-width: 480px) {
       .card-wrapper{
         width: 100%;
-        height: 100%;
+        height: 500px;
       }
       .gb-hero-text h1 {
         font-size: 22px;
@@ -210,21 +210,21 @@
         height: 135px;
       }
       .gb-card {
-        width: 100%;     /* expands card more */
+        width: 100%;    
         margin-top: 10px;
         border-radius: 16px;
       }
 
       .gb-hero {
-        height: 220px; /* slightly reduce banner height */
+        height: 220px;
       }
 
       .gb-content {
-        padding-top: 65px; /* adjust below logo */
+        padding-top: 65px;
       }
-    }
+    } */
     /* MOBILE VIEW OPTIMIZED FOR 425px AND BELOW */
-@media (max-width: 425px) {
+@media only screen and (max-width: 425px) {
 
   body {
     padding: 0;
@@ -232,12 +232,14 @@
   }
 
   .card-wrapper {
-    width: 100%;
+    width: 550px;
+    height: 500px;
     padding: 0;
   }
 
   .gb-card {
     width: 100%;
+    height: 500px;
     margin: 12px auto;
     border-radius: 14px;
   }
@@ -264,6 +266,7 @@
   }
 
   .gb-content {
+    height: 100px;
     padding: 55px 10px 20px;
   }
 
