--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Grinbizz EXIM PVT LTD</title>
   <link rel="icon" type="image/png" href="favicon.png">
 
@@ -224,78 +225,84 @@
       }
     } */
     /* MOBILE VIEW OPTIMIZED FOR 425px AND BELOW */
-@media only screen and (max-width: 425px) {
+/* FULL SCREEN CARD FOR MOBILE VIEW 425PX & BELOW */
+@media (max-width: 425px) {
 
-  body {
+  html, body {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    background: #444; /* optional background like your preview */
+  }
+
+  .card-wrapper {
+    width: 100%;
+    height: 100vh; /* full screen height */
     padding: 0;
     margin: 0;
   }
 
+  .gb-card {
+    width: 100%;
+    height: 100vh; /* make card take entire vertical space */
+    margin: 0;
+    border-radius: 20px; /* remove rounded edges for full screen */
+    overflow-y: auto; /* scroll content inside */
+  }
+
+  .gb-hero {
+    height: 200px; /* adjust banner height */
+  }
+
+  .gb-content {
+    padding-top: 0px; /* adjust because logo overlaps */
+  }
+
+  .social-list {
+    padding-bottom: 40px; /* space for scroll bottom */
+  }
+}
+/* FULL SCREEN MOBILE NO MARGIN ANYWHERE */
+/* FULL-SCREEN CARD ON MOBILE */
+@media (max-width: 600px) {
+
+  html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background: #000;      /* same as card */
+  }
+
+  /* Cancel the desktop flex-centering on mobile */
+  body {
+    display: block;        /* important: remove flex */
+  }
+
   .card-wrapper {
-    width: 550px;
-    height: 500px;
+    width: 100%;
+    max-width: none;       /* remove 440px limit */
+    height: 100vh;
+    margin: 0;
     padding: 0;
   }
 
   .gb-card {
     width: 100%;
-    height: 500px;
-    margin: 12px auto;
-    border-radius: 14px;
-  }
-
-  .gb-hero {
-    height: 200px; /* reduce banner height */
-    background-size: cover;
-  }
-
-  .gb-logo-circle {
-    width: 115px;
-    height: 115px;
-    border-width: 6px;
-    transform: translate(50%, -38%);
-  }
-
-  .gb-hero-text h1 {
-    font-size: 19px;
-  }
-
-  .gb-hero-text .eyebrow {
-    font-size: 11px;
-    letter-spacing: 0.5px;
+    max-width: none;
+    height: 100vh;
+    margin: 0;
+    border-radius: 0;      /* edge-to-edge */
+    box-shadow: none;      /* optional */
+    overflow-y: auto;      /* scroll inside if needed */
   }
 
   .gb-content {
-    height: 100px;
-    padding: 55px 10px 20px;
+    padding-left: 12px;
+    padding-right: 12px;
   }
-
-  .gb-title h2 {
-    font-size: 22px;
-  }
-
-  .gb-subtitle {
-    font-size: 12px;
-    margin-bottom: 15px;
-  }
-
-  .social-list {
-    gap: 9px;
-  }
-
-  .social-btn {
-    padding: 12px;
-    font-size: 14px;
-    border-radius: 10px;
-  }
-
-  .social-btn-icon {
-    width: 28px;
-    height: 28px;
-    font-size: 16px;
-  }
-
 }
+
+
 
   
   </style>
